# Handwritten-Digits-Classification

./: Readme.md  pyproject.toml  requirements.txt
notebooks/: digits_classification.ipynb
src/: evaluate.py  train.py
src/utils/: load_data.py
