[tool.poetry]
name = "handwritten-digits-classification"
version = "0.1.0"
description = ""
authors = ["aurelien.davodet <aurelien.davodet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
